# macro

./: SahmRule.ipynb  pyproject.toml
data/: stateUER.csv  statesConversion.csv
