[tool.poetry]
name = "macro"
version = "0.1.0"
description = ""
authors = ["myo-kun <kai.stevensnoguchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
